--- a/test/index (2).html
+++ b/test/index (2).html
@@ -1,5 +1,5 @@
 <script type="module">
-  import consoleImage from "../index.js"
+  import consoleImage from "../index.js";
   button.onclick = () => consoleImage("https://picsum.photos/200");
 </script>
 <button id="button"><code>consoleImage()</code></button>
